# cli-spend-tracking

./: .envrc.sample  .gitignore  Cargo.toml  LICENSE  README.md
database/: readme.md
database/scripts/: setup.sql
src/: app.rs  config.rs  main.rs
src/components/: row.rs  table.rs
src/data/: mod.rs  trnx.rs
