[package]
name = "spending"
version = "0.1.0"
description = "cli for spend tracking"
authors = ["destumme <destumme@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
sqlite = "0.37.0"

[dependencies.uuid]
version = "1.18.0"
features = [
    "v7",
]
